<resources>
    <string name="app_name">PsycheWhirlpool</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_timeline">Timeline Activity</string>
    <string name="title_activity_facts">Facts Activity</string>
    <string name="title_activity_gallery">Gallery Activity</string>
    <string name="title_activity_countdown">Countdown to Launch of Psyche Spacecraft</string>
    <string name="title_activity_game">Game Activity</string>
    <string name="title_activity_social_media">SocialMedia</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">6Gekxk012j0RkDVr9x6wwornQ</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">	L9vdf2MOhyBrbW53C7Q6WaPH3dVW4bG24X096iwxnP4EOR0PD5</string>
    <string name="title_activity_social_component">SocialComponent</string>
    <string name="title_activity_social_media_tabs">SocialMediaTabs</string>
    <string name="facebook_app_id">1499176063510395</string>
    <string name="timeline_title">Psyche Mission Timeline</string>
    <string name="title_activity_time_phase">Time Phase Activity</string>
    <string name="countdown_colonDelin">:</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="phase_seven">Phase 7</string>
    <string name="faq">FAQ</string>
    <string name="phase_six">Phase 6</string>
    <string name="phase_five">Phase 5</string>
    <string name="phase_four">Phase 4</string>
    <string name="phase_three">Phase 3</string>
    <string name="phase_two">Phase 2</string>
    <string name="phase_one">Phase 1</string>
    <string name="error_message">Error</string>
    <string name="faq_intro">
        "Mission Overview\n\n"
        "Psyche is:\n"
        "-The name of an asteroid orbiting the Sun between Mars and Jupiter.\n"
        "-The name of a NASA space mission to visit that asteroid, led by ASU.\n\n"

        "Psyche is the first mission to a world made of metal rather than rock or ice.\n\n"

        "The Psyche mission was chosen by NASA on January 4, 2017.\n\n"

        "Psyche is the 14th mission selected for NASA’s Discovery Program, a series of "
        "relatively low-cost missions to solar system targets.\n\n"

        "Summary of Psyche Mission Timeline:\n\n"
        "2022: Launch of Psyche spacecraft from NASA’s Kennedy Space Center, FL\n\n"
        "2023: Psyche spacecraft flyby of Mars\n\n"
        "2026: Psyche spacecraft arrives in asteroid’s orbit\n\n"
        "2026-2027: Psyche spacecraft orbits the Psyche asteroid for 21 months\n\n"
    </string>
    <string name="faq_propulsion">
        "Propulsion: Solar-electric (low-thrust) propulsion.\n\n"
        "-Solar electric propulsion uses electricity from solar arrays to create electromagnetic "
        "fields to accelerate and expel charged atoms (ions) of xenon to create a very low thrust "
        "with a very efficient use of propellant[1].\n\n"

        "-This will be the first use of Hall effect thrusters beyond lunar orbit.\n\n"

        "The Psyche spacecraft is using xenon:\n\n"
        "-Xenon is a gas that is in the air we breathe (in very small amounts— 0.09 parts per "
        "million![2])\n\n"

        "-Xenon gas is used in high quality light bulbs, including automobile headlamps and movie "
        "projectors.\n\n"

        "-The most common propellant used in ion propulsion is xenon, which is easily ionized and "
        "has a high atomic mass, thus generating a desirable level of thrust when ions are "
        "accelerated.\n\n"

        "-It also is inert and has a high storage density; therefore, it is well suited for "
        "storing on spacecraft.\n\n"

        "References:\n\n"
        "[1] https://www.nasa.gov/content/how-will-nasas-asteroid-redirect-mission-help-humans-reach-mars\n"
        "[2] http://www.srh.noaa.gov/jetstream/atmos/atmos_intro.html\n"
        "[3] https://www.nasa.gov/centers/glenn/about/fs21grc.html\n\n"
    </string>
    <string name="faq_spacecraft">
        "Spacecraft size:\n"
        "The full spacecraft, including the solar panels, is 24.76 meters (~81 feet) long by "
        "7.34 meters (~24 feet) wide.\n"
        "That is about the size of a (singles) tennis court.\n\n"

        "Bus size:\n"
        "The bus (body) of the spacecraft is 3.1 meters (~10 feet) long by 2.4 meters "
        "(almost 8 feet) wide.\n"
        "A few size comparisons:\n"
        "-It is slightly bigger than a Smart Car.\n"
        "-It about the size of a garden storage shed.\n"
        "-It is as tall as a regulation basketball hoop!\n\n"
    </string>
    <string name="faq_mission_cost">
        "Mission cost:\n"
        "-Estimated $850 million (includes mission development, operations, and science)\n"
        "-Amount does not include cost for the launch service which is procured separately\n"
        "-Amount does not include the cost for the Deep Space Optical Communications demonstration "
        "hardware or operations\n\n"
    </string>
</resources>