<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asu.whirlpool.psychewhirlpool.timeline.TimePhaseActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/nodeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/timeNode0"
                    android:layout_width="@dimen/phase_button_size"
                    android:layout_height="@dimen/phase_button_size"
                    android:layout_gravity="center"
                    android:background="@color/psyche_black"
                    android:onClick="onClick"
                    android:text="@string/phase_one"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:src="@color/psyche_black" />

                <Button
                    android:id="@+id/timeNode1"
                    android:layout_width="@dimen/phase_button_size"
                    android:layout_height="@dimen/phase_button_size"
                    android:layout_gravity="center"
                    android:background="@color/psyche_black"
                    android:onClick="onClick"
                    android:text="@string/phase_two"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:src="@color/psyche_black" />

                <Button
                    android:id="@+id/timeNode2"
                    android:layout_width="@dimen/phase_button_size"
                    android:layout_height="@dimen/phase_button_size"
                    android:layout_gravity="center"
                    android:background="@color/psyche_black"
                    android:onClick="onClick"
                    android:text="@string/phase_three"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:src="@color/psyche_black" />

                <Button
                    android:id="@+id/timeNode3"
                    android:layout_width="@dimen/phase_button_size"
                    android:layout_height="@dimen/phase_button_size"
                    android:layout_gravity="center"
                    android:background="@color/psyche_black"
                    android:onClick="onClick"
                    android:text="@string/phase_four"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:src="@color/psyche_black" />

                <Button
                    android:id="@+id/timeNode4"
                    android:layout_width="@dimen/phase_button_size"
                    android:layout_height="@dimen/phase_button_size"
                    android:layout_gravity="center"
                    android:background="@color/psyche_black"
                    android:onClick="onClick"
                    android:text="@string/phase_five"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:src="@color/psyche_black" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/timeline_title"
        android:textColor="@color/psyche_black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>
